src/ttd1/k8s/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    service: hello-world
spec:
  selector:
    app: hello-world
  ports:
  - port: 5000
    targetPort: 5000
